[gd_scene load_steps=18 format=2]

[ext_resource path="res://Environment/Items/000_0063_heart3.png" type="Texture" id=1]
[ext_resource path="res://Environment/Items/000_0057_heart9.png" type="Texture" id=2]
[ext_resource path="res://Environment/Items/000_0056_heart10.png" type="Texture" id=3]
[ext_resource path="res://Environment/Items/000_0060_heart6.png" type="Texture" id=4]
[ext_resource path="res://Environment/Items/000_0059_heart7.png" type="Texture" id=5]
[ext_resource path="res://Environment/Items/000_0058_heart8.png" type="Texture" id=6]
[ext_resource path="res://Environment/Items/000_0062_heart4.png" type="Texture" id=7]
[ext_resource path="res://Environment/Items/000_0061_heart5.png" type="Texture" id=8]
[ext_resource path="res://Environment/Items/000_0065_heart.png" type="Texture" id=9]
[ext_resource path="res://Environment/Items/000_0064_heart2.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Heart.gd" type="Script" id=11]
[ext_resource path="res://Sound/Pickup.mp3" type="AudioStream" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7.5, 8.5 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Default"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Downsize"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}

[node name="Heart" type="Area2D"]
z_index = 2
script = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 1e-05, 1 )
frames = SubResource( 2 )
playing = true

[node name="FinishTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="Pickup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="Size" type="AnimationPlayer" parent="."]
anims/Default = SubResource( 3 )
anims/Downsize = SubResource( 4 )
anims/RESET = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Heart_body_entered"]
[connection signal="timeout" from="FinishTimer" to="." method="_on_FinishTimer_timeout"]
